# piwrite

./: .gitignore  Cargo.toml  README.md  build.rs  project.godot
.github/workflows/: rust.yml
piWrite.AppDir/: .DirIcon  AppRun  piWrite-x86_64.AppImage  piWrite.desktop
src/: PiWrite.gdnlib  indicator.gd  indicator.tscn  letterpie.png.import  lib.rs  main.rs  main.tscn  pie.rs
windows/: icon.svg.import  piwrite.rc
