[package]
name = "joy_write"
version = "0.1.0"
authors = ["Santiago Cézar <santiagocezar2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.7.4"
enigo = "0.0.14"
gdnative = "0.8"

[lib]
crate-type = ["cdylib"]