[package]
name = "piwrite"
version = "0.1.0"
authors = ["Santiago Cézar <santiagocezar2013@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
canvas = []

[dependencies]
gilrs = "0.7.4"
enigo = "0.0.14"
piston_window = "0.107.0"
image = "0.23.2"

[dependencies.pistoncore-glutin_window]
git = "https://github.com/PistonDevelopers/glutin_window"
